fixed faq-link and share-button alignment

--- a/src/style/visualizations/main.sass
+++ b/src/style/visualizations/main.sass
@@ -72,26 +72,31 @@ $box-shadow: 0 6px 38px -18px rgba(0, 0, 0, 0.3), 0 11px 12px -12px rgba(0, 0, 0
   .faq-and-share-wrapper
     display: flex
     align-items: center
+    margin-left: 16px
 
   .faq-link-wrapper
     display: inline-block
+    margin-right: 16px
 
-    h3
-      font-size: 18px
-      font-weight: bold
-      padding: 12px 16px
-      // border: 1px solid $yellow
+    @media only screen and (max-width: 500px)
+      margin-right: 8px
+
+    div
       background: #fff
-      margin-bottom: 0
 
       .faq-link
+        display: inline-block
         color: black
-        border: solid 1px rgba(0, 0, 0, 0.13)
-        padding: 4px 11px
+        font-weight: bold
+        line-height: 24px
+        font-size: 18px
+        padding: 3px 12px
         border-radius: 6px
+        border: solid 1px rgba(0, 0, 0, 0.13)
+        cursor: pointer
 
-      .faq-link:hover
-        text-decoration: none
+        &:hover
+          text-decoration: none
 
   .share-component-wrapper
     display: inline-block
@@ -100,16 +105,22 @@ $box-shadow: 0 6px 38px -18px rgba(0, 0, 0, 0.3), 0 11px 12px -12px rgba(0, 0, 0
       border-radius: 6px
       border: solid 1px rgba(0, 0, 0, 0.13)
       cursor: pointer
-      padding: 3px 12px 3px 8px
+      padding: 3px 12px 3px 4px
+      display: flex
+      align-items: center
 
       @media only screen and (max-width: 500px)
-        padding: 3px 8px
+        padding: 3px 3.5px
+      
+      @media only screen and (min-width: 501px)
+        min-width: 124px
       
       .share-button-caption
         display: inline-block
         font-size: 14px
-        line-height: 25px
+        line-height: 24px
         font-weight: bold
+        margin-left: 7px
         @media only screen and (max-width: 500px)
           display: none
 
